syntax = "proto3";

service balance {
	rpc GetBalance (BalanceRequest) returns (BalanceResponse);
	rpc UpdateBalance (BalanceUpdate) returns (BalanceUpdateResponse);
	rpc UpdateBalanceSubscribe (SubscribeRequest) returns (stream BalanceUpdateResponse);
}


message BalanceRequest {
	string did = 1;
}

message BalanceResponse {
	repeated string actionIds = 1;
}


message BalanceUpdate {
	string did = 1;
	repeated string actionIds = 2;
	string updatedBy = 3;
}

message BalanceUpdateResponse {
	string message = 1;
	BalanceUpdate update = 2;
}


message SubscribeRequest {
	string subscriberId = 1;
}

